manifests/auth/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  labels:
    app.kubernetes.io/name: auth
    app.kubernetes.io/component: auth
    app.kubernetes.io/part-of: hr-core
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: auth
    app.kubernetes.io/component: auth
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
